live-prop-test-macros/tests/compile_fail/needs_containing_impl.stderr
error: when using live-prop-test on methods inside an `impl`, you must also put the #[live_prop_test] attribute on the containing impl
  --> $DIR/needs_containing_impl.rs:13:23
   |
13 |   fn constructor() -> Self {
   |                       ^^^^

error: when using live-prop-test on methods inside an `impl`, you must also put the #[live_prop_test] attribute on the containing impl
  --> $DIR/needs_containing_impl.rs:18:35
   |
18 |   fn associated_constructor() -> <Self as Trait>::Associated {}
   |                                   ^^^^

error: when using live-prop-test on methods inside an `impl`, you must also put the #[live_prop_test] attribute on the containing impl
  --> $DIR/needs_containing_impl.rs:21:32
   |
21 |   fn associated_argument(arg: <Self as Trait>::Associated) {}
   |                                ^^^^

error: when using live-prop-test on methods inside an `impl`, you must also put the #[live_prop_test] attribute on the containing impl
  --> $DIR/needs_containing_impl.rs:24:20
   |
24 |   fn by_ref_method(&self) {}
   |                    ^

error: when using live-prop-test on methods inside an `impl`, you must also put the #[live_prop_test] attribute on the containing impl
  --> $DIR/needs_containing_impl.rs:27:22
   |
27 |   fn by_value_method(self) {}
   |                      ^^^^

error: when using live-prop-test on methods inside an `impl`, you must also put the #[live_prop_test] attribute on the containing impl
  --> $DIR/needs_containing_impl.rs:32:34
   |
32 |   fn associated_constructor() -> Self::Associated;
   |                                  ^^^^
